# porthole-python-client

./: .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE.txt  README.md  emacs_porthole.py  requirements-dev.txt  setup.cfg  setup.py  tests.py
emacs_porthole/: __init__.py  core.py  emacs_porthole.py  exceptions.py  json_rpc.py  test.py  utils.py
test/: test.py
