[metadata]
name = emacs_porthole
author = Jcaw
author-email = toastedjcaw@gmail.com
summary = Python client for Emacs RPC servers started with Porthole
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/jcaw/porthole-python-client/
project_urls =
             Bug Tracker = https://github.com/jcaw/porthole-python-client/issues
             Documentation = https://github.com/jcaw/porthole-python-client/README.md
             Source Code = https://github.com/jcaw/porthole-python-client/
license = MIT
# TODO: Check functionality on Python 2.7 and lower
requires-python = >=3
classifier =
           # "3 - Alpha", "4 - Beta", "5 - Production/Stable"
           Development Status :: 4 - Beta
           Intended Audience :: Developers
           Topic :: Text Editors :: Emacs
           Programming Language :: Python
           Programming Language :: Emacs-Lisp
           Natural Language :: English
           License :: OSI Approved :: MIT License
           Operating System :: OS Independent  
           Programming Language :: Python :: 2.7
           Programming Language :: Python :: 3
keywords =
         porthole
         client   
         emacs    
         rpc
         http
         json-rpc
         elisp
         emacs-lisp
